--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "node-server.js",
   "dependencies": {
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {},
