--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "node-server.js",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
-    "shelljs": "^0.8.3"
+    "mongodb": "^3.5.5",
+    "oauth2-server": "^3.0.1",
+    "shelljs": "^0.8.3",
+    "testing": "^2.0.1",
+    "uuid": "^7.0.2",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {},
   "scripts": {
