--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "node-server.js",
   "dependencies": {
+    "async-mutex": "^0.2.4",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "mongodb": "^3.5.5",
+    "mysql": "^2.18.1",
     "oauth2-server": "^3.0.1",
     "shelljs": "^0.8.3",
     "testing": "^2.0.1",
