--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "mailgun-js": "^0.22.0",
     "mongodb": "^3.5.5",
     "mysql": "^2.18.1",
     "oauth2-server": "^3.0.1",
