--- a/services/content-explained/SetupFiles/DataBase/mysql.properties
+++ b/services/content-explained/SetupFiles/DataBase/mysql.properties
@@ -1,6 +1,7 @@
-mysql.user=CE
-mysql.password=ITSJUSTATESTDB
 mysql.host=localhost
 mysql.database=CE
 
 port=3306
+
+mysql.test.user=CE
+mysql.test.password=ITSJUSTATESTDB
