inset, half and full overlay working need to create information interface to check the values

--- a/services/cabinet/public/cabinets.properties
+++ b/services/cabinet/public/cabinets.properties
@@ -2,7 +2,7 @@
 section=Cabinet
 type=standard
 values
-brh=tkb.w + pb.t + brr - br.w
+brh=tkb.w + pb.t + brr - fb.w
 stl=frorl + pr.t
 str=frorr + pl.t
 st=str + stl
@@ -13,32 +13,32 @@ tkb.dememsions=pr.t + frorl + (l / 2), w / 2, tkd + (t / 2)
 tkb.center=tkh, c.w - st, tkbw'
 tkb.rotation=z
 
-rr=Frame:Right
-rr.dememsions=w / 2, brh + (l / 2), t / 2
-rr.center=frw, c.l - brh, frt
+fr=Frame:Right
+fr.dememsions=w / 2, brh + (l / 2), t / 2
+fr.center=frw, c.l - brh, frt
 
-lr=Frame:left
-lr.dememsions=c.w - (w / 2), brh + (l / 2), t / 2'
-lr.center=frw, c.l - brh, frt
+fl=Frame:left
+fl.dememsions=c.w - (w / 2), brh + (l / 2), t / 2'
+fl.center=frw, c.l - brh, frt
 
-br=Frame:Bottom
-br.dememsions=lr.w + (l / 2), brh + (w / 2), t / 2'
-br.center=frw, c.w - lr.w - rr.w,frt
-br.rotation='z'
+fb=Frame:Bottom
+fb.dememsions=fl.w + (l / 2), brh + (w / 2), t / 2'
+fb.center=frw, c.w - fl.w - fr.w,frt
+fb.rotation='z'
 
-tr=Frame:Top
-tr.dememsions=lr.w + (l / 2), c.l - (w/2),t / 2
-tr.center=frw,br.l,frt
-tr.rotation=z
+ft=Frame:Top
+ft.dememsions=fl.w + (l / 2), c.l - (w/2),t / 2
+ft.center=frw,fb.l,frt
+ft.rotation=z
 
 pr=Panel:Right
-pr.dememsions=c.w - frorl - (t / 2),l / 2,(w / 2) + lr.t
-pr.center=c.t - lr.t,c.l,pwt34
+pr.dememsions=c.w - frorl - (t / 2),l / 2,(w / 2) + fl.t
+pr.center=c.t - fl.t,c.l,pwt34
 pr.rotation=y
 
 pl=Panel:Left
-pl.dememsions=frorr + (t / 2), l / 2, (w/2) + rr.t
-pl.center=f'c.t - lr.t,c.l,pwt34
+pl.dememsions=frorr + (t / 2), l / 2, (w/2) + fr.t
+pl.center=f'c.t - fl.t,c.l,pwt34
 pl.rotation=y
 
 pb=Panel:Back
@@ -47,8 +47,8 @@ pb.center=c.l - tkb.w, c.w - st, pwt34
 pb.rotation=z
 
 pbt=Panel:Bottom
-pbt.dememsions=(l / 2) + stl, brh + br.w - (t / 2) - brr,br.t + (w / 2)
-pbt.center=c.t - br.t - pb.t,c.w - st,pwt34
+pbt.dememsions=(l / 2) + stl, brh + fb.w - (t / 2) - brr,fb.t + (w / 2)
+pbt.center=c.t - fb.t - pb.t,c.w - st,pwt34
 pbt.rotation=yx
 
 section=joints
@@ -64,11 +64,11 @@ Dado=pbt->br, 3/8
 Dado=pbt->rr, 3/8
 Dado=pbt->lr, 3/8
 Butt=pb->pbt'
-Butt=tr->rr
-Butt=tr->lr
-Butt=br->rr
-Butt=br->lr
-divide=tr, br, lr, rr
+Butt=ft->rr
+Butt=ft->lr
+Butt=fb->rr
+Butt=fb->lr
+divide=ft, fb, fl, fr
 
 
 
@@ -83,28 +83,28 @@ str=frorr + pl.t
 st=str + stl
 
 section=subassembly
-rr=Frame:Right
-rr.dememsions=w / 2, brh + (l / 2), t / 2
-rr.center=frw, c.l - brh, frt
+fr=Frame:Right
+fr.dememsions=w / 2, brh + (l / 2), t / 2
+fr.center=frw, c.l - brh, frt
 
-lr=Frame:left
-lr.dememsions=c.w - (w / 2), brh + (l / 2), t / 2'
-lr.center=frw, c.l - brh, frt
+fl=Frame:left
+fl.dememsions=c.w - (w / 2), brh + (l / 2), t / 2'
+fl.center=frw, c.l - brh, frt
 
-br=Frame:Bottom
-br.dememsions=lr.w + (l / 2), brh + (w / 2), t / 2'
-br.center=frw, c.w - lr.w - rr.w,frt
-br.rotation='z'
+fb=Frame:Bottom
+fb.dememsions=fl.w + (l / 2), brh + (w / 2), t / 2'
+fb.center=frw, c.w - fl.w - fr.w,frt
+fb.rotation='z'
 
-tr=Frame:Top
-tr.dememsions=lr.w + (l / 2), c.l - (w/2),t / 2
-tr.center=frw,br.l,frt
-tr.rotation=z
+ft=Frame:Top
+ft.dememsions=fl.w + (l / 2), c.l - (w/2),t / 2
+ft.center=frw,fb.l,frt
+ft.rotation=z
 
 
 section=joints
-Butt=tr->rr
-Butt=tr->lr
-Butt=br->rr
-Butt=br->lr
-divide=tr, br, lr, rr
+Butt=ft->rr
+Butt=ft->lr
+Butt=fb->rr
+Butt=fb->lr
+divide=ft, fb, fl, fr
