--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "html-pdf": "^3.0.1",
     "mailgun-js": "^0.22.0",
     "mongodb": "^3.5.5",
     "mysql": "^2.18.1",
     "oauth2-server": "^3.0.1",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "shelljs": "^0.8.3",
     "testing": "^2.0.1",
     "uuid": "^7.0.2",
