--- a/services/cabinet/web-worker/services/modeling/modeling-data-configuration.json
+++ b/services/cabinet/web-worker/services/modeling/modeling-data-configuration.json
@@ -5,7 +5,8 @@
   "DividerSection": [],
   "SectionProperties": ["id", "back.id", "top.id", "bottom.id", "left.id", "right.id", "rotation", "coordinates.inner",
       "divideRight", "pattern.str", "verticalDivisions", "dividerCount", "sectionCount",
-      "coordinates.outer", "dividerJoint", "isVertical", "divider.id", "sections>id", "partCode"],
+      "coordinates.outer", "dividerJoint", "isVertical", "divider.id", "sections>id",
+      "partCode", "locationCode"],
   "DivideSection": [],
   "DrawerSection": [],
   "PanelSection": [],
@@ -26,7 +27,7 @@
   "Divider": ["maxWidt", "planeThickness", "type"],
   "OpeningToeKick": ["leftCornerCutter.id", "rightCornerCutter.id", "toKickPanel.id",
       "toeKickCutter.id", "opening.id", "autoToeKick.id"],
-  "AutoToekick": [],
+  "AutoToekick": ["leftEndStyle", "rightEndStyle"],
   "DrawerBox": [],
   "DrawerFront": [],
   "Guides": [],
@@ -36,7 +37,8 @@
   "CutterReference": ["reference", "fromPoint", "offset", "front"],
   "CutterPoly": ["poly"],
   "ControlableAbyss": [],
-  "CabinetOpeningCorrdinates": ["id", "coordinates", "partCode", "locationCode"],
+  "CabinetOpeningCorrdinates": ["id", "coordinates", "partCode", "locationCode",
+        "right.id", "left.id", "top.id", "bottom.id"],
   "Vector3D": ["i", "j", "k"],
   "Joint": ["id", "maleOffset", "femaleOffset",
             "demensionAxis", "centerAxis", "fullLength", "discriptor"],
