functionality complete: successfully constructing all parts and applying joints effectivly\n\tSlight reorganization will be done

--- a/services/cabinet/web-worker/services/modeling/modeling-data-configuration.json
+++ b/services/cabinet/web-worker/services/modeling/modeling-data-configuration.json
@@ -2,29 +2,29 @@
   "Assembly": ["id","parentAssembly.id","partCode","partName","locationCode",
       "part","includeJoints", "position", "included", "children>id"],
   "Position": ["current.center","current.demension","current.normals","current.biPolyNorm"],
-  "DividerSection": [],
+  "DividerSection": ["divider.id"],
   "SectionProperties": ["id", "back.id", "top.id", "bottom.id", "left.id", "right.id", "rotation", "coordinates.inner",
       "divideRight", "pattern.str", "verticalDivisions", "dividerCount", "sectionCount",
       "coordinates.outer", "dividerJoint", "isVertical", "divider.id", "sections>id",
-      "partCode", "locationCode"],
+      "partCode", "locationCode", "parentAssembly.id"],
   "DivideSection": [],
   "DrawerSection": [],
   "PanelSection": [],
   "FalseFrontSection": [],
-  "DualDoorSection": ["gap"],
+  "DualDoorSection": ["gap", "left.id", "right.id", "divider.id"],
   "DoorSection": [],
   "Frame": [],
   "Panel": [],
   "PanelVoidIndex": ["index"],
   "PanelToeKickBacker": [],
-  "Void": [],
+  "Void": ["includedSides", "jointSetIndex"],
   "Screw": [],
-  "Handle": [],
+  "Handle": ["centerToCenter", "location", "projection"],
   "DoorCatch": [],
   "Hinge": [],
-  "Door": [],
+  "Door": ["inElivation"],
   "HasPull": [],
-  "Divider": ["maxWidt", "planeThickness", "type"],
+  "Divider": ["maxWidth", "planeThickness", "type"],
   "OpeningToeKick": ["leftCornerCutter.id", "rightCornerCutter.id", "toKickPanel.id",
       "toeKickCutter.id", "opening.id", "autoToeKick.id"],
   "AutoToekick": ["leftEndStyle", "rightEndStyle"],
