room cabinet part ww modeling complete: going to start integrating with application.

--- a/services/cabinet/web-worker/external/modeling-data-configuration.json
+++ b/services/cabinet/web-worker/external/modeling-data-configuration.json
@@ -42,5 +42,6 @@
   "Vector3D": ["i", "j", "k"],
   "Joint": ["id", "maleOffset", "femaleOffset",
             "demensionAxis", "centerAxis", "fullLength", "discriptor"],
-  "Property": ["value"]
+  "Property": ["value"],
+  "ModelInformation": ["environment"]
 }
