WebWorker csg creation integrated into the application

--- a/services/cabinet/web-worker/external/modeling-data-configuration.json
+++ b/services/cabinet/web-worker/external/modeling-data-configuration.json
@@ -33,6 +33,8 @@
   "Guides": [],
   "Cabinet": [],
   "Cutter": [],
+  "Object3D": ["id", "height", "width", "thickness", "rotation", "center", "count"],
+  "Stairs": ["count", "treadLength"],
   "CutterModel": [],
   "CutterReference": ["reference", "fromPoint", "offset", "front"],
   "CutterPoly": ["poly"],
